css/style.css
/* Custom Fonts */
.pt-sans-bold {
    font-family: "PT Sans", serif;
    font-weight: 700;
    font-style: normal;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.html, body {
    overflow-y: auto;
    overflow-x: hidden;
    height: 100%;
}
body {
    font-family: Arial, sans-serif;
    padding-top: 55px;
    overflow-x: hidden;
    margin: 0;
    width: 100vw;
}

.navbar{
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100vw;
    padding: 10px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: white;
    z-index: 1000;
    border: 0px solid red;
    border-bottom: 3px solid #191a1d;
}

/* Left navbar: Name Button */
.nav-left {
    flex: 1;
    display: flex;
    justify-content: flex-start;
}

.name-btn {
    margin-left: 10px;
    margin-right: 25px;
    width: 225px;
    height: 50px;
    border: none;
    background-size: contain;
    cursor: pointer;
    justify-content: center;
    align-content: center;
    transition: opacity 0.3s ease, transform 0.2s ease;
}
.name-btn img{
    width: 180px;
    height: auto;
    display: block;
    transition: transform 0.2s ease;
}
.name-btn:hover img {
    cursor: grab;
    transform: scale(1.01);
}

/* Hide Hamburger on large screens */
.menu-icon {
    display: none;
    width: 50px;
    height: 50px;
    background: none;
    border: none;
    cursor: grab;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    right: 114px;
    margin-bottom: 10px;
}
.menu-icon img {
    display: none;
    width: 50px;
    height: 50px;
    transition: transform 0.8s ease;
}
.menu-icon:hover img {
    transform: scale(1.1);
    transform: rotate(-360deg);
}

/* Middle navbar: Nav Buttons */
.nav-middle {
    flex: 1;
    display: flex;
    justify-content: center;
    gap: 10px;
}

.nav-btn {
    font-family: "PT Sans", serif;
    font-weight: 700;
    font-style: normal;
    width: 110px;
    text-align: center;
}

/* Right navbar: Social Icons */
.nav-right {
    flex: 1;
    display: flex;
    justify-content: flex-end;
    gap: 10px;
}

/* Button styling */
a {
    text-decoration: none;
    background: white;
    padding: 8px 15px;
    cursor: grab;
    font-size: 18px;
    font-weight: bold;
    color: black;
    transition: transform 0.3s ease, background-color 0.3s ease;
}
a:hover {
    transform: scale(1.1);
    background-color: #F1F1F1;
}

/* Icon buttons */
.icon-btn {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 40px;
    height: 40px;
    border-radius: 5px;
}

.icon-btn img {
    width: 35px;
    height: 35px;
    transition: transform 0.8s ease;
}
.icon-btn:hover img {
    transform: rotate(360deg);
}


/* INDEX.HTML SPECIFIC STYLING */
.hero-container {
    background-color: #14181D;
    height: 525px;
    background: url("../graphics/homepage/home_about_background.png") no-repeat center center;
    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 40px;
    padding: 20px;
}

.photo-container {
    width: 300px;
    height: auto;
    display: flex;
    justify-content: center;
    align-items: center;

}
.photo-container img {
    width: 300px;
    height: auto;
    opacity: 0.9;
    object-fit: contain;
}

.about-container {
    width: 800px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 0px solid red;
    text-align: center;
    flex-shrink: 0;
}
.about-container img {
    width: 800px;
    object-fit: contain;
    border: 0px solid gold;
}

/* Projects Containers */
.projects-contact-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
    padding: 10px;
    background-color: white;
    max-width: 1200px;
    margin: 10px auto;
    border: 0px solid green;
}
.projects-container {
    flex: 1;
    text-align: center;
    max-width: 600px;
    border: 0px solid orange;
}
.projects-title {
    justify-content: center;
    align-content: center;
    border: 0px solid red;
    padding-bottom: 5px;
}
.projects-title img {
    width: 400px;
    object-fit: contain;
    border: 0px solid gold;
}

.carousel {
    width: 100%;
    max-width: 1200px;
    max-width: 600px;
    margin: 0px auto;
}
.carousel-inner {
    height: 100%;
}
.carousel img {
    width: 100%;
    height: 100%;
    border: 0px solid gold;
}
.carousel-control-prev,
.carousel-control-next {
    width: 5%;
    height: 10%;
    justify-content: center;
    align-items: center;
    opacity: 0.7;
    transition: opacity 0.3s ease-in-out, transform 0.2s ease-in-out;
    top: 45%;
}
.carousel-control-prev:hover,
.carousel-control-next:hover {
    background-color: #191a1d;
    opacity: 0.4;
}
.carousel-control-prev-icon,
.carousel-control-next-icon {
    width: 20px;
    height: 20px;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 50%;
    padding: 5px;
}

.video-box {
    width: 100%;
    max-width: 600px;
    display: flex;
    flex-direction: column;
    align-items: center;
    border: 0px solid black;
    text-align: center;
}
.project-video {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 0px solid gold;
    overflow: hidden;
}
.project-video video {
    width: 105.6%;
    height: auto;
    object-fit: cover;
    cursor: pointer;
    transition: transform 0.3s ease, opacity 0.3s ease;
}
.project-video:hover {
    transform: scale(1.05);
    opacity: 0.85;
}

.contact-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1;
    border: 0px solid red;
    padding: 10px;
    text-align: center;

}
.contact-title {
    border: 0px solid orange;
    margin-bottom: 10px;
}
.contact-title img {
    width: 280px;
    border: 0px solid green;
}
.contact-graphic img {
    max-width: 100%;
    height: auto;
    display: block;
    border: 0px solid gold;
}

.powerlifting-section {
    background-image: url("../graphics/homepage/powerlifting_background.jpg");
    background-size: cover;
    justify-content: center;
    text-align: center;
    display: flex;
    flex-direction: column;
    max-height: 1500px;
    border: 0px solid red;
}
.powerlifting-title-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
    border-radius: 10px;
    margin: 0 auto 0px;
    transition: transform 0.3s ease, background-color 0.3s ease;
    margin-top: 10px;
    max-width: 550px;
    background: transparent;
    border: 0px solid red;
}
.powerlifting-title-container:hover {
    transform: scale(1.05);
    background-color: #ddd;
}
.powerlifting-logo {
    min-width: 30%;
    border: 0px solid green;
}
.powerlifting-logo img {
    width: 95%;
}
.index-powerlifting-title {
    min-width: 80%;
}
.index-powerlifting-title img{
    width: 95%;
    height: auto;
    object-fit: contain;
    border: 0px solid gold;
}
.powerlifting-content-wrapper {
    display: flex;
    justify-content: space-between;
    background: transparent;
    align-items: center;
    align-content: center;
    gap: 25px;
    width: 1000px;
    margin: 0 auto;
    border: 0px solid gold;
}
.powerlifting-photo-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 300px;
    gap: 20px;
    border: 0px solid brown;
}
.powerlifting-photo img {
    width: 95%;
}
.powerlifting-description {
    width: 500px;
    border: 0px solid orange;
}
.powerlifting-coaching-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 200px;
    padding: 20px;
    border-radius: 10px;
    border: 0px solid green;
}
.powerlifting-coaching-description {
    width: 90%;
}
.powerlifting-coaching-video {
    height: 252px;
    width: 420px;
    border: 0px solid red;
}
.powerlifting-photo img,
.powerlifting-description img,
.powerlifting-coaching-video video,
.powerlifting-coaching-description img {
    width: 95%;
    height: auto;
    border-radius: 5px;
}

/* Responsive Design */
@media (max-width: 1200px) {
    .menu-icon {
        display: block;
    }
    .menu-icon img {
        display: block;
    }

    .nav-menu button {
        width: 100%;
        padding: 10px;
        border: none;
        background: none;
        text-align: center;
    }
    .nav-middle {
        display: none;
        flex-direction: column;
        align-items: center;
        position: absolute;
        top: 60px;
        right: 20px;
        width: 200px;
        background: white;
        border: 1px solid #ccc;
        padding: 10px;
        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    }
    .nav-middle.active {
        display: flex;
    }
    .nav-btn {
        width: 100%;
        text-align: center;
    }
    
    .hero-container {
        height: 800px;
        max-height: 100vw;
        min-height: 425px;
        gap: 20px;
        flex-direction: column;   /* Stack vertically on smaller screens */
        align-items: center;
    }
    .photo-container {
        max-width: 40vw;
    }
    .photo-container img {
        width: 100%;
    }
    .about-container {
        max-width: 90vw;
    }
    .about-container img{
        width: 100%;
    }  

    .projects-contact-wrapper {
        flex-direction: column;
        align-items: center;
        gap: 15px;
    }
    .projects-container, .contact-section {
        max-width: 100%;
        text-align: center;
    }
    .contact-section {
        align-content: center;
        padding: 0px;
        width: 600px;
    }

    .powerlifting-section {
        max-height: 2000px;
    }
    .powerlifting-title-container {
        margin-bottom: 0px;
    }
    .powerlifting-photo-container {
        padding-bottom: 0px;
        gap: 0px;
    }
    .powerlifting-photo-container img {
        width: 90%;
    }
    .powerlifting-content-wrapper {
        max-width: 490px;
        flex-direction: column;
        align-items: center;
        gap: 0px;
    }
    .powerlifting-coaching-container {
        width: 105%;
    }
    .powerlifting-coaching-description {
        width: 100%;
    }

}

